# Linear-Stuffs

./: .gitmodules  CMakeLists.txt  README.md
include/: LinAlgo.hpp  Timer.h  matrix.h
kernels/: generate_kernels.py  matrix_kernels_char.cl  matrix_kernels_double.cl  matrix_kernels_float.cl  matrix_kernels_int.cl  matrix_kernels_long.cl  matrix_kernels_short.cl  matrix_kernels_template.tcl
src/: Timer.cpp  main.cpp  matrix.cpp
test/: test.cpp  test.cpp.old  utilities.h
test/Timer/include/: Timer.h
test/Timer/src/: Timer.cpp
test/tests/: accuracy.cpp  utilities.h
